views y routesrs basicos de boludeces hecho modelos creo que tambien

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
+  header
+    #title
+      h1
+      a(href='/') flo app
+    nav
+      h2
+      a(href='/log-in') Log-in
+      h2
+      a(href='/sign-up') Sign-Up
+
