encriptado en la creacion de coso hecho

--- a/views/createPost.pug
+++ b/views/createPost.pug
@@ -21,5 +21,6 @@ block content
 
       label(for="content") 
       input(type="text" id="content" name="content" placeholder="content")
+      input(type='submit' value='OK')
 
 
