--- a/views/login.pug
+++ b/views/login.pug
@@ -22,4 +22,5 @@ block content
       label(for="password") 
       input(type="password" id="password" name="password" placeholder="password")
 
+      input(type='submit' value='OK')
 
