--- a/views/index.pug
+++ b/views/index.pug
@@ -18,6 +18,6 @@ block content
       h2 
         a(href="/log-out") Log-Out 
       h2 
-        a(href="/createPost") Create a Post 
+        a(href="/create-post") Create a Post 
       h2 
         a(href="/upgrade") Upgrade your member Status   
