--- a/views/index.pug
+++ b/views/index.pug
@@ -1,43 +1,66 @@
 extends layout
 block content
-  header
- 
+  main
+    header
 
-    #title
-      h1
-        a(href='/') flo app
-    nav
-    if !user
-      h2
-      a(href='/log-in') Log-in
-      h2
-      a(href='/sign-up') Sign-Up
-      if user 
-        p=user 
-    else 
-      h2 
-        a(href="/log-out") Log-Out 
-      h2 
-        a(href="/create-post") Create a Post 
-      h2 
-        a(href="/upgrade") Upgrade your member Status   
-    
+
+      #title
+        h1
+          a(href='/') flo app
+      nav
+        if !user
+          h2
+          a(href='/log-in') Log-in
+          h2
+          a(href='/sign-up') Sign-Up
+          if user 
+            p=user 
+        else 
+          h2 
+            a(href="/log-out") Log-Out 
+          h2 
+            a(href="/create-post") Create a Post 
+          h2 
+            a(href="/upgrade") Upgrade your member Status   
     #posts 
-    if posts 
-      for post in posts 
-        #postTop
-         h3=post.title
-         if user
-           if user.member_status === "admin" || user.member_status === "member"
-            h4=post.user.username
-         else 
-          h4 USER(ANONYMOUS)
-        p=post.content  
-        p=post.timestamp 
-        if user 
-          if user.member_status === "admin"
-            form(method="post" )
-              input(type="text" name="postid" value=post.id class="hidden")
-              input(type='submit' value='DELETE POST')
+      if posts 
+        for post in posts
+          .post
 
-        hr
+            if user
+              if user.img
+                img(src='user.img').imageContainer
+            else
+            img(src="https://abs.twimg.com/sticky/default_profile_images/default_profile_400x400.png").imageContainer
+
+            .infoContainer
+              h2=post.title
+              if user
+                if user.member_status === "admin" || user.member_status === "member"
+                  h3.profileName=post.user.name
+                else 
+                  h3.profileName name(ANONYMOUS)
+              else 
+                h3.profileName name(ANONYMOUS)
+
+              if user
+                  if user.member_status === "admin" || user.member_status === "member"
+                    h4.profileUsername @ #{post.user.username}
+                  else 
+                    h4.profileUsername @username(ANONYMOUS)
+              else 
+                  h4.profileUsername @username(ANONYMOUS)
+
+              h4.postDate=post.timestamp
+            .contentContainer
+              p.postContent=post.content
+
+            if user 
+              if user.member_status === "admin"
+                .formContainer 
+                  form(method="post")
+                    input(type="text" name="postid" value=post.id class="hidden")
+                    input(type='submit' value='DELETE POST')
+
+
+
