--- a/views/login.pug
+++ b/views/login.pug
@@ -1,33 +1,34 @@
 extends layout
 
 block content
-  header
-    #title
-      h1
-      a(href='/') flo app
-    nav
-      h2
-      a(href='/log-in') Log-in
-      h2
-      a(href='/sign-up') Sign-Up
+  main
+    header
+      #title
+        h1
+        a(href='/') flo app
+      nav
+        h2
+        a(href='/log-in') Log-in
+        h2
+        a(href='/sign-up') Sign-Up
 
 
     .formContainer 
-    h1  Login into your account
-    form(method="post")
-     
-      label(for="username") 
-      input(type="text" name="username" id="username" placeholder="introduce your username")
-      
-      label(for="password") 
-      input(type="password" id="password" name="password" placeholder="introduce your password")
-      
-      input(type='submit' value='OK')
+      h1  Login into your account
+      form(method="post")
 
-      if errors 
-        for error in errors 
-          p=error
+        label(for="username") 
+        input(type="text" name="username" id="username" placeholder="introduce your username")
 
-      
+        label(for="password") 
+        input(type="password" id="password" name="password" placeholder="introduce your password")
 
-      
+        input(type='submit' value='OK')
+
+        if errors 
+          for error in errors 
+            p=error
+
+
+
+
