--- a/views/upgrade.pug
+++ b/views/upgrade.pug
@@ -1,38 +1,36 @@
 extends layout
 
 block content
-  main
     header
-
-
       #title
         h1
-          a(href='/') flo app
+          a(href='/') Fló App
       nav
+
         h2 
           a(href="/log-out") Log-Out 
         h2 
           a(href="/create-post") Create a Post 
         h2 
-          a(href="/upgrade") Upgrade your member Status 
+          a(href="/upgrade") Upgrade your member Status
+    main
+      .formContainer 
+        h1  Upgrade to member
+        form(method="post" action="/upgrade/upgradeMember") 
 
-    .formContainer 
-      h1  Upgrade to member
-      form(method="post" action="/upgrade/upgradeMember") 
-
-        label(for="memberpassword") 
-        input(type="password" name="memberpassword" id="memberpassword" placeholder="secret password") 
-        input(type='submit' value='OK')
-
-
-    .formContainer 
-      h1  Upgrade to admin
-      form(method="post" action="/upgrade/upgradeAdmin") 
-
-        label(for="adminpassword") 
-        input(type="password" name="adminpassword" id="adminpassword" placeholder="admin password") 
-        input(type='submit' value='OK')
+          label(for="memberpassword") 
+          input(type="password" name="memberpassword" id="memberpassword" placeholder="secret password") 
+          input(type='submit' value='OK')
 
 
-    if error 
-      p=error
+      .formContainer 
+        h1  Upgrade to admin
+        form(method="post" action="/upgrade/upgradeAdmin") 
+
+          label(for="adminpassword") 
+          input(type="password" name="adminpassword" id="adminpassword" placeholder="admin password") 
+          input(type='submit' value='OK')
+
+
+      if error 
+        p=error
