ahora se puede añadir fotos editar fotos y hint en las claves

--- a/views/createPost.pug
+++ b/views/createPost.pug
@@ -12,7 +12,7 @@ block content
       h2 
         a(href="/create-post") Create a Post 
       h2 
-        a(href="/upgrade") Upgrade your member Status
+        a(href="/upgrade") Profile Configuration   
 
   main 
 
